frontend/src/console/components/ThemeFooter/styles.scss
@import '~styles/theme';

.theme-footer-container {
  .row {
    padding: 0;
    flex-flow: row nowrap;
    align-items: end;

    .col-md-4 {
      padding: 0 15px 0 0;

      .form-label {
        font-size: 13px;
      }

      .row {
        display: flex;
        align-items: center;
        padding: 0 15px;

        .input-field-color.form-control[readonly] {
          width: 75%;
          background-color: white;
        }

        .input-field-color.form-control[disabled] {
          background-color: #e9ecef !important;
        }

        .info-icon {
          padding: 5px 10px;
          color: $primary-1;
        }
      }
    }
  }
}

